added background gradient for button

--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,7 @@ img {
 }
 
 .btn__primary {
+  background: var(--gradient-1);
   color: var(--color-white);
   background-size: 200% auto;
   transition: var(--transition);
