--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@ img {
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 950px) {
   .section__header {
     display: flex;
     justify-content: center;
@@ -222,7 +222,7 @@ img {
   }
 
   .section__header .primary__title,
-  .section__header .description {
+  .section__header .title {
     text-align: center;
   }
 
