gsap animation added to navbar

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,11 @@
   width: 100%;
 }
 
+.navbar__container.visible {
+  background: var(--color-ui-2);
+  position: sticky;
+}
+
 .navbar__container .logo__container {
   display: flex;
   align-items: flex-end;
